[package]
name = "gst-plugin-opentok"
version = "0.1.0"
authors = ["Fernando Jimenez Moreno <fjimenez@igalia.com>", "Philippe Normand <philn@igalia.com>"]
edition = "2021"
description = "GStreamer plugin to allow publishing and subscribing to OpenTok audio and video streams"
repository = "https://github.com/opentok-rust/gst-plugin-opentok"
homepage = "https://github.com/opentok-rust/gst-plugin-opentok"
license = "MPL-2.0"
autoexamples = false
readme = "README.md"

[package.metadata.deb]
name = "gst-plugin-opentok"
assets = [
  ["target/release/deps/libgstopentok.so", "/usr/lib/x86_64-linux-gnu/gstreamer-1.0/", "644"],
  ["target/release/gst-opentok-helper", "/usr/bin/", "755"],
]
depends = "$auto,libopentok,libc++1-7"
systemd-units = { }

[lib]
name = "gstopentok"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "gst-opentok-helper"
path = "helper/main.rs"

[dependencies]
anyhow = "1.0.40"
async-std = { version = "1", features = ["attributes"] }
byte-slice-cast = "1.0.0"
clap = { version = "3.0" }
clap-serde = { version = "0.3", features = ["yaml"] }
derive_more = "0.99.14"
env_logger = "0.9.0"
gst = { package = "gstreamer", version = "0.20" }
gst-app = { package = "gstreamer-app", version = "0.20" }
gst-audio = { package = "gstreamer-audio", version = "0.20" }
gst-base = { package = "gstreamer-base", version = "0.20" }
gst-video = { package = "gstreamer-video", version = "0.20" }
ipc-channel = "0.15.0"
log = "0.4.14"
once_cell = "1.0"
# FIXME: Update to upstream when it is released
opentok = { git = "https://github.com/opentok-rust/opentok-rs.git", rev = "f09365e86774fd979c2265db46ca8ac679cf7ec3" }
serde = "1.0.130"
signal-child = "1.0.3"
signal-hook = "0.3.10"
signal-hook-async-std = "0.2.1"
signal-hook-registry = "1.4.0"
thiserror = "1.0.25"
url = "2.2"
uuid = "0.8.2"
yaml-rust = "0.4"
json = "0.12"
surf = "2"

[build-dependencies]
gst-plugin-version-helper = "0.7"

[dev-dependencies.async-std]
features = ["attributes"]
version = "1"

[[example]]
name = "multiple_subscribers"
path = "examples/multiple_subscribers.rs"

[[example]]
name = "publisher"
path = "examples/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/subscriber.rs"
